# mdlibs

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROT.md  docker-compose.yml
.github/workflows/: ci.yml
docs/registry/: API.md  ARCHITECTURE.md  CLI_INTEGRATION.md  DEPLOYMENT.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  MVP_PLAN.md  REQUIREMENTS.md
registry/: .dockerignore  Cargo.toml  Dockerfile  README.md
registry/src/: main.rs
src/: main.rs  utils.rs
src/commands/: init.rs  list.rs  mod.rs  search.rs  update.rs
src/config/: mod.rs
